--- a/vignettes/articles/I-gathering.Rmd
+++ b/vignettes/articles/I-gathering.Rmd
@@ -6,7 +6,7 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 opengraph:
     image:
-      src: https://github.com/taxonomicallyinformedannotation/tima-r/blob/main/man/figures/logo.svg
+      src: https://github.com/taxonomicallyinformedannotation/tima/blob/main/man/figures/logo.svg
       alt: "Taxonomically Informed Metabolite Annotation"
     twitter:
       creator: "@adafede"
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = "../..")
 ```
 
-```{r timar, results="hide", message=FALSE, warning=FALSE, include = FALSE}
+```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 library("tima")
 ```
 This vignette describes...
@@ -235,4 +235,4 @@ targets::tar_visnetwork(
 )
 ```
 
-We now recommend you to read the [next vignette](https://taxonomicallyinformedannotation.github.io/tima-r/articles/II-preparing.html).
+We now recommend you to read the [next vignette](https://taxonomicallyinformedannotation.github.io/tima/articles/II-preparing.html).
