--- a/vignettes/articles/II-preparing.Rmd
+++ b/vignettes/articles/II-preparing.Rmd
@@ -6,7 +6,7 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 opengraph:
     image:
-      src: https://github.com/taxonomicallyinformedannotation/tima-r/blob/main/man/figures/logo.svg
+      src: https://github.com/taxonomicallyinformedannotation/tima/blob/main/man/figures/logo.svg
       alt: "Taxonomically Informed Metabolite Annotation"
     twitter:
       creator: "@adafede"
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = "../..")
 ```
 
-```{r timar, results="hide", message=FALSE, warning=FALSE, include = FALSE}
+```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 library("tima")
 ```
 
@@ -136,7 +136,7 @@ The sirius workspace should ideally have `yourPattern_sirius` as name and be pla
 source(file = "inst/scripts/prepare_annotations_sirius.R")
 ```
 
-If you want to know how we attempt to combine the CSI score with other ones, see [R/transform_score_sirius_csi.R](https://github.com/taxonomicallyinformedannotation/tima-r/blob/main/R/transform_score_sirius_csi.R)
+If you want to know how we attempt to combine the CSI score with other ones, see [R/transform_score_sirius_csi.R](https://github.com/taxonomicallyinformedannotation/tima/blob/main/R/transform_score_sirius_csi.R)
 Note that starting from SIRIUS6, the _approx_ confidence score is the one considered, and not the exact one.
 
 ```{r annotations-all, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
@@ -234,4 +234,4 @@ targets::tar_visnetwork(
 )
 ```
 
-We now recommend you to read the [next vignette](https://taxonomicallyinformedannotation.github.io/tima-r/articles/III-processing.html).
+We now recommend you to read the [next vignette](https://taxonomicallyinformedannotation.github.io/tima/articles/III-processing.html).
