--- a/vignettes/articles/III-processing.Rmd
+++ b/vignettes/articles/III-processing.Rmd
@@ -6,7 +6,7 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 opengraph:
     image:
-      src: https://github.com/taxonomicallyinformedannotation/tima-r/blob/main/man/figures/logo.svg
+      src: https://github.com/taxonomicallyinformedannotation/tima/blob/main/man/figures/logo.svg
       alt: "Taxonomically Informed Metabolite Annotation"
     twitter:
       creator: "@adafede"
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = "../..")
 ```
 
-```{r timar, results="hide", message=FALSE, warning=FALSE, include = FALSE}
+```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 library("tima")
 ```
 
@@ -39,4 +39,4 @@ The final exported file is formatted in order to be easily imported in [Cytoscap
 
 We hope you enjoyed using **TIMA** and are pleased to hear from you!
 
-For any remark or suggestion, please  [fill an issue](https://github.com/taxonomicallyinformedannotation/tima-r/issues) or feel free to contact us directly.
+For any remark or suggestion, please  [fill an issue](https://github.com/taxonomicallyinformedannotation/tima/issues) or feel free to contact us directly.
