Update a few things

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# tima <img src='man/figures/logo.svg' align="right" height="139" />
+# tima <img src='https://github.com/taxonomicallyinformedannotation/tima/blob/main/man/figures/logo.svg' align="right" height="139" />
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
