--- a/vignettes/articles/III-processing.Rmd
+++ b/vignettes/articles/III-processing.Rmd
@@ -32,7 +32,7 @@ This vignette describes how **T**axonomically **I**nformed **M**etabolite **A**n
 If you followed all previous steps successfully, this should be a piece of cake, you deserve it!
 
 ```{r weight-all, message=FALSE}
-source(file = "inst/scripts/weight_annotations.R")
+targets::tar_make(names = matches("ann_pre$"))
 ```
 
 The final exported file is formatted in order to be easily imported in [Cytoscape](https://cytoscape.org/) to further explore your data!
