--- a/vignettes/articles/I-gathering.Rmd
+++ b/vignettes/articles/I-gathering.Rmd
@@ -107,7 +107,7 @@ tima::get_file(
 MassBank is downloaded and used by default.
 
 ```{r spectra-mb, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_spe_exp_mb_raw"))
+targets::tar_make(names = matches("lib_spe_exp_mb_raw"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 We are currently working to get all MONA and GNPS experimental spectra easily available.
@@ -129,11 +129,11 @@ For more info, see <https://doi.org/10.5281/zenodo.5607185>.
 It is made available in both polarities.
 
 ```{r get-isdb-lotus, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_spe_is_lot"))
+targets::tar_make(names = matches("lib_spe_is_lot"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 ```{r prepare-isdb-lotus-1, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_spe_is_lot_pre"))
+targets::tar_make(names = matches("lib_spe_is_lot_pre"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 You can also complement with the in silico spectra from HMDB (not running by default as quite long):
@@ -156,7 +156,7 @@ It could also be a library of in silico predicted retention times.
 If you want to prepare you own library, have a look at `inst/params/user/prepare_libraries_rt.yaml`, and then:
 
 ```{r rts-2, results="hide", message=FALSE, warning=FALSE}
-targets::tar_make(names = matches("lib_rt"))
+targets::tar_make(names = matches("lib_rt"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 #### Structure-Organism Pairs
@@ -171,11 +171,11 @@ As we developed [LOTUS](https://lotusnprod.github.io/lotus-manuscript)^[For more
 we provide it here as a starting point for your structure-organism pairs library.
 
 ```{r get-lotus, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_sop_lot$"))
+targets::tar_make(names = matches("lib_sop_lot$"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 ```{r prepare-lotus-2, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_sop_lot_pre"))
+targets::tar_make(names = matches("lib_sop_lot_pre"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 The process to download LOTUS looks like this:
@@ -186,6 +186,7 @@ targets::tar_visnetwork(
   exclude = c(
     contains("benchmark"),
   ),
+  script = system.file("/pipelines/_targets.R", "tima"),
   targets_only = TRUE,
   degree_from = 8
 )
@@ -200,7 +201,7 @@ If a newer version exists, it will fetch it and re-run needed steps accordingly.
 By default, we also complement LOTUS pairs with the ones coming from [ECMDB](https://ecmdb.ca/).
 
 ```{r prepare-ecmdb-1, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_sop_ecm_pre"))
+targets::tar_make(names = matches("lib_sop_ecm_pre"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 ##### HMDB
@@ -208,7 +209,7 @@ targets::tar_make(names = matches("lib_sop_ecm_pre"))
 And we do the same with the ones coming from [HMDB](https://hmdb.ca/).
 
 ```{r prepare-hmdb, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_sop_hmd_pre"))
+targets::tar_make(names = matches("lib_sop_hmd_pre"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 For these first steps, you do not need to change any parameters as they are implemented *by default*.
@@ -223,7 +224,7 @@ If you need help formatting your library or would like to share it with us for i
 Before running the corresponding code, do not forget to modify `inst/params/user/prepare_libraries_sop_closed.yaml`
 
 ```{r prepare-closed, results="hide", message=FALSE, warning=FALSE}
-targets::tar_make(names = matches("lib_sop_clo_pre"))
+targets::tar_make(names = matches("lib_sop_clo_pre"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 ##### Merging
@@ -231,7 +232,7 @@ targets::tar_make(names = matches("lib_sop_clo_pre"))
 Once all sub-libraries are ready, they are then merged in a single file that will be used for the next steps.
 
 ```{r libraries-sop-1, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = matches("lib_sop_mer"))
+targets::tar_make(names = matches("lib_sop_mer"), script = system.file("/pipelines/_targets.R", "tima"))
 ```
 
 ```{r libraries-sop-2, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
@@ -242,6 +243,7 @@ targets::tar_visnetwork(
     contains("par_"),
     contains("paths")
   ),
+  script = system.file("/pipelines/_targets.R", "tima"),
   targets_only = TRUE,
   degree_from = 8
 )
