--- a/vignettes/tima.Rmd
+++ b/vignettes/tima.Rmd
@@ -68,7 +68,6 @@ targets::tar_visnetwork(
     contains("library_sop_lotus"),
     contains("library_sop_closed")
   ),
-  script = system.file("pipelines/_targets.R", package = "tima"),
   targets_only = TRUE,
   degree_from = 8,
   level_separation = 200
@@ -100,5 +99,5 @@ tima::run_app()
 If you do not even need a GUI ☠️:
 
 ```{r eval=FALSE, include=TRUE}
-targets::tar_make(names = matches("^ann_pre$"), script = system.file("pipelines/_targets.R", package = "tima"))
+targets::tar_make(names = matches("^ann_pre$"))
 ```
