--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ Optionally, you may want to add:
 
 ## Installation
 
-As the package is not (yet) available on CRAN, you will need to install the development version [GitHub](https://github.com/) with:
+As the package is not (yet) available on CRAN, you will need to install with:
 
 ``` r
 install.packages("tima", repos = c("https://taxonomicallyinformedannotation.r-universe.dev", "https://cloud.r-project.org"))
