--- a/vignettes/tima.Rmd
+++ b/vignettes/tima.Rmd
@@ -85,7 +85,14 @@ Each step is detailed in the related [vignettes](https://taxonomicallyinformedan
 All coming steps admit you already installed `tima`:
 
 ```{r eval=FALSE, include=TRUE}
-install.packages("tima", repos = c("https://taxonomicallyinformedannotation.r-universe.dev", "https://cloud.r-project.org"))
+install.packages(
+  "tima",
+  repos = c(
+    "https://taxonomicallyinformedannotation.r-universe.dev",
+    "https://bioc.r-universe.dev",
+    "https://cloud.r-project.org"
+  )
+)
 tima::install()
 tima::get_example_files()
 ```
