--- a/vignettes/articles/I-gathering.Rmd
+++ b/vignettes/articles/I-gathering.Rmd
@@ -24,9 +24,9 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = "../..")
 ```
 
-```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
+```{r tima, include = FALSE}
 library("tima")
-copy_backbone()
+tima:::copy_backbone()
 ```
 This vignette describes...
 
