--- a/vignettes/articles/II-preparing.Rmd
+++ b/vignettes/articles/II-preparing.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-knitr::opts_knit$set(root.dir = "../..")
+knitr::opts_knit$set(root.dir = system.file(package = "tima"))
 ```
 
 ```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
@@ -66,7 +66,7 @@ targets::tar_make(names = c(tidyselect::matches("^ann_spe_is")))
 
 <!-- #### GNPS -->
 <!-- We also provide an example GNPS job id, which is: `41c6068e905d482db5698ad81d145d7c` -->
-<!-- Before running the corresponding code, do not forget to modify `inst/params/user/prepare_*yourAnnotationTool*.yaml`. -->
+<!-- Before running the corresponding code, do not forget to modify `params/user/prepare_*yourAnnotationTool*.yaml`. -->
 <!-- Depending on the annotation tool you used, you can format its results using: -->
 
 ```{r annotate-gnps, eval=FALSE, message=FALSE, warning=FALSE, include=FALSE, results="hide"}
