--- a/vignettes/tima.Rmd
+++ b/vignettes/tima.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-knitr::opts_knit$set(root.dir = "..")
+knitr::opts_knit$set(root.dir = system.file(package = "tima"))
 ```
 
 ```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
