--- a/README.Rmd
+++ b/README.Rmd
@@ -98,7 +98,7 @@ docker pull adafede/tima-r --platform linux/amd64
 
 ``` bash
 docker run --user tima-user -v "$(pwd)/data:/home/tima-user/.tima/data" -p 3838:3838 adafede/tima-r Rscript -e "tima::run_app()"
-# docker run --user tima-user -v "$(pwd)/data:/home/tima-user/.tima/data" -p 3838:3838 adafede/tima-r Rscript -e "tima::tima_full()"
+# docker run --user tima-user -v "$(pwd)/data:/home/tima-user/.tima/data" adafede/tima-r Rscript -e "tima::tima_full()"
 ```
 
 Or alternatively (if you did pull the repository and are located at the right place):
