--- a/vignettes/articles/III-processing.Rmd
+++ b/vignettes/articles/III-processing.Rmd
@@ -1,13 +1,13 @@
 ---
-title: "3 Performing Taxonomically Informed Metabolite Annotation"
-author: "Adriano Rutz"
+title: 3 Performing Taxonomically Informed Metabolite Annotation
+author: Adriano Rutz
 creative_commons: CC BY-SA
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 opengraph:
     image:
       src: https://github.com/taxonomicallyinformedannotation/tima/blob/main/man/figures/logo.svg
-      alt: "Taxonomically Informed Metabolite Annotation"
+      alt: Taxonomically Informed Metabolite Annotation
     twitter:
       creator: "@adafede"
 vignette: >
